# cognee

./: .env  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  Dockerfile  README.md  TEMPORAL_INTEGRATION_COMPLETE.md  THOUGHT_GRAPH_SUMMARY.md  docker-compose.yml  java-21-onto.owl  pyproject.toml
cognee-aws-bedrock/: .gitignore  MIGRATION_COMPLETE.md  MIGRATION_INSTRUCTOR.md  README.md  example.py  pyproject.toml  test_migration.py
cognee-aws-bedrock-baml/: .gitignore  README.md  example.py  pyproject.toml
cognee-aws-bedrock-baml/docs/: BAML_CONFIG.md  BEST_PRACTICES.md  CROSS_REGION.md  EMBEDDING_MODELS.md  LLM_MODELS.md  MODELS.md  OVERVIEW.md  README.md
cognee-aws-bedrock-baml/src/cognee_aws_bedrock_baml/: __init__.py  bedrock_models_config.py  register.py  utils.py
cognee-aws-bedrock-baml/src/cognee_aws_bedrock_baml/baml_src/: __init__.py  clients.baml  generators.baml
cognee-aws-bedrock-baml/src/cognee_aws_bedrock_baml/embedding/: __init__.py  baml_bedrock_embedding_adapter.py
cognee-aws-bedrock-baml/src/cognee_aws_bedrock_baml/llm/: __init__.py  baml_bedrock_llm_adapter.py
cognee-aws-bedrock-baml/tests/: test_baml_bedrock_models_config.py
cognee-aws-bedrock/docs/: IMPLEMENTATION_SUMMARY.md  MODELS.md
cognee-aws-bedrock/src/cognee_aws_bedrock/: __init__.py  bedrock_models_config.py  register.py  utils.py
cognee-aws-bedrock/src/cognee_aws_bedrock/docs/: BATCHING_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MODELS.md  MODEL_CONFIGURATIONS.md  README.md
cognee-aws-bedrock/src/cognee_aws_bedrock/embedding/: __init__.py  bedrock_embedding_adapter.py
cognee-aws-bedrock/src/cognee_aws_bedrock/llm/: __init__.py  bedrock_llm_adapter.py
cognee-aws-bedrock/tests/: test_bedrock_models_config.py
cognee-github-copilot/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  example.py  pyproject.toml
cognee-github-copilot/src/cognee_github_copilot/: __init__.py  register.py  utils.py
cognee-github-copilot/src/cognee_github_copilot/docs/: MODELS.md  README.md
cognee-github-copilot/src/cognee_github_copilot/embedding/: __init__.py  github_copilot_embedding_adapter.py
cognee-github-copilot/src/cognee_github_copilot/llm/: __init__.py  github_copilot_llm_adapter.py
cognee-temporal-starter/: .env.template  .gitignore  ANALYSIS_AND_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OVERVIEW.md  QUICK_REFERENCE.md  README.md  TESTING.md  pyproject.toml
cognee-temporal-starter/src/: __init__.py
cognee-temporal-starter/src/api/: __init__.py  temporal_server.py
cognee-temporal-starter/src/api/routers/: __init__.py  chat_session_endpoints.py  episode_endpoints.py  episode_relationships.py  relationship_tracking.py  (+4 more)
cognee-temporal-starter/src/pipelines/: __init__.py  chat_session_example.py  chat_session_models.py  chat_session_processor.py  episode_graphiti_example.py  temporal_advanced.py  temporal_basic.py
cognee-web-scraper/: .env.template  .gitignore  CHANGELOG.md  EVENT_LOOP_FIX.md  FIXES_APPLIED.md  FIX_SUMMARY.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  pyproject.toml  scrapy.cfg  test_subprocess_script.py  test_syntax.py
cognee-web-scraper/examples/: scrape_blog.py  scrape_docs.py  simple_example.py
cognee-web-scraper/src/: __init__.py  run_scraper_standalone.py
cognee-web-scraper/src/config/: scraper_config.py
cognee-web-scraper/src/models/: data_models.py
cognee-web-scraper/src/pipelines/: __init__.py  scrape_website.py
cognee-web-scraper/src/processors/: __init__.py  content_processor.py
cognee-web-scraper/src/scraper/: __init__.py  pipelines.py  settings.py
(+105 files in other folders)
