[project]
name = "cognee-aws-bedrock"
version = "0.1.0"
description = "AWS Bedrock adapter for Cognee - LLM, Embedding, and Reranking support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cognee Contributors"}
]
dependencies = [
    "cognee>=0.1.0",
    "litellm>=1.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cognee_aws_bedrock", "cognee_aws_bedrock.llm", "cognee_aws_bedrock.embedding", "cognee_aws_bedrock.docs"]
