[project]
name = "cognee-github-copilot"
version = "0.1.0"
description = "GitHub Copilot adapter for Cognee - LLM support for all GitHub Copilot Pro+ models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Cognee Contributors"}
]
dependencies = [
    "cognee>=0.1.0",
    "litellm>=1.0.0",
    "instructor>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cognee_github_copilot", "cognee_github_copilot.llm", "cognee_github_copilot.embedding"]
