[project]
name = "cognee-web-scraper"
version = "0.1.0"
description = "Web scraping and crawling pipeline for Cognee using Scrapy and Jina ReaderLM-v2"
readme = "README.md"

requires-python = ">=3.10, <=3.13"

dependencies = [
    "cognee[docs,codegraph]>=0.3.5,<1.0.0",
    "scrapy>=2.12.0,<3.0.0",
    "scrapy-playwright>=0.0.44,<1.0.0",
    "playwright>=1.49.0,<2.0.0",
    "pillow>=11.1.0,<12.0.0",
    "openai>=1.80.1",
    "transformers>=4.46.3,<5.0.0",
    "protego>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.1,<0.22",
]
llm = [
    "vllm>=0.8.3,<1.0.0; sys_platform == 'linux' or sys_platform == 'darwin'",
    "torch>=2.6.0",
]
